--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "dependencies": {
     "@heroicons/vue": "^2.0.16",
     "@vue/devtools": "^6.5.0",
-    "@vueschool/browser-devtools": "^1.0.8",
     "vconsole": "^3.15.1",
     "vconsole-sources": "^1.0.1",
     "vue": "^3.2.38",
@@ -34,6 +33,7 @@
     "prettier": "^2.7.1",
     "tailwindcss": "^3.2.7",
     "vite": "^4.3.9",
+    "vite-plugin-vue-devtools": "^7.0.27",
     "vitest": "^0.32.2"
   },
   "engines": {
