--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vue/devtools": "^6.5.0",
     "vconsole": "^3.15.1",
     "vconsole-sources": "^1.0.1",
+    "vite-plugin-terminal": "^1.2.0",
     "vue": "^3.2.38",
     "vue-vconsole-devtools": "^1.0.9"
   },
