Allow support of our custom editor

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "exercise-1",
   "version": "0.0.0",
   "license": "UNLICENSED",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
